Closed Bug 1430187 Opened 8 years ago Closed 8 years ago

search only searches visible area of textarea (version 58.0b15 (64-bit))

Categories

(Toolkit :: Find Toolbar, defect)

58 Branch
x86_64
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- wontfix
firefox59 --- fixed
firefox60 --- fixed

People

(Reporter: alexander.kern, Assigned: bradwerth)

References

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:58.0) Gecko/20100101 Firefox/58.0 Build ID: 20180108140638 Steps to reproduce: Load a page that has a textarea on it with parts of it not visible (you would need to scroll in the textarea to see the nonvisible parts) Search for text that is in the non visible party of the textarea Actual results: Firefox search says "Phrase not found" Expected results: Search should have found what I looked for and scrolled the textarea to that part. If I scroll the textarea so the part I searched for is visible, search does find it like expected. If you need an example/proof/can't reproduce I can upload screenshots. Regards and thanks for working on Firefox!
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:58.0) Gecko/20100101 Firefox/58.0 Firefox: 58.0, Build ID: 20180115093319 I have managed to reproduce this issue on latest Beta 58 and latest Nightly (59.0a1) build on Windows, Linux and Mac. I have reproduce this issue following the next steps: 1. Start Nightly browser and navigate to "https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_textarea" page. 2. Paste a large text in the "textarea". 3. Copy a few words from the bottom of the "textarea". 4. Scroll to the top of the "textarea". 5. Press the Ctrl+F/Cmd+F shortcut and paste the copied text in the Find Bar from the bottom of the browser. 6. Observe the behavior. [Actual results]: - There is no match found. [Notes]: - Here is a screen recording with the issue: https://goo.gl/iuj7FZ - In certain cases the issue is not reproducible if the browser is not maximized. [Regression]: This issue is not reproducible on Firefox 57.0.4 release. Considering this I have used the mozregression tools in order to find the regression window. Here are the results: Last good revision: e6510aeb4e94df029cc47d2d00cd2f19ba5cc9d3 First bad revision: 59045a9d7990aaa8262e28a6bccfda2ca82ecd68 Pushlog: https://goo.gl/sph4Dw I think bug 1302470 introduced this issue. Brad can you please take a look at this?
Status: UNCONFIRMED → NEW
Component: Untriaged → Find Toolbar
Ever confirmed: true
Flags: needinfo?(bwerth)
Keywords: regression
OS: Unspecified → All
Product: Firefox → Toolkit
Hardware: Unspecified → x86_64
I've got a patch that solves this problem, at the expense of allowing find-in-page success in the very unlikely situation of an unrendered bit of text scrolled away in a visible scrollable container. There may be further improvements I can make on this; I'll check after the test run to see what breaks.
Assignee: nobody → bwerth
Flags: needinfo?(bwerth)
Attachment #8944118 - Flags: review?(mdeboer)
Attachment #8944540 - Flags: review?(mdeboer)
Comment on attachment 8944118 [details] Bug 1430187 Part 1: Allow find-in-page to unilaterally find text that's out of view in a scrollable container. https://reviewboard.mozilla.org/r/214446/#review220524 LGTM! Thanks!
Attachment #8944118 - Flags: review?(mdeboer) → review+
Comment on attachment 8944540 [details] Bug 1430187 Part 2: Add a test of find-in-page with overflowed textareas. https://reviewboard.mozilla.org/r/214708/#review220528 Thanks for this test. Let's ship it! ::: toolkit/modules/tests/browser/browser_Finder_overflowed_textarea.js:3 (Diff revision 1) > +/* Any copyright is dedicated to the Public Domain. > + * http://creativecommons.org/publicdomain/zero/1.0/ */ > + Please add `"use strict";` below the comment. ::: toolkit/modules/tests/browser/browser_Finder_overflowed_textarea.js:10 (Diff revision 1) > + > + // Generate URI of a big DOM that contains the target text at several > + // line positions (to force some targets to be offscreen). > + const linesToGenerate = 155; > + const linesToInsertTargetText = [5, 50, 150]; > + let targetCount = linesToInsertTargetText.length; nit: this can be a `const` as well.
Attachment #8944540 - Flags: review?(mdeboer) → review+
Pushed by bwerth@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d8a18bd202a6 Part 1: Allow find-in-page to unilaterally find text that's out of view in a scrollable container. r=mikedeboer https://hg.mozilla.org/integration/autoland/rev/56b491b533fa Part 2: Add a test of find-in-page with overflowed textareas. r=mikedeboer
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
Please request Beta approval on this when you get a chance.
Blocks: 1302470
Flags: needinfo?(bwerth)
Flags: in-testsuite+
Comment on attachment 8944118 [details] Bug 1430187 Part 1: Allow find-in-page to unilaterally find text that's out of view in a scrollable container. Approval Request Comment [Feature/Bug causing the regression]: Bug 1302470 [User impact if declined]: Find-in-page will not find overflowed text in textareas and other scrollable containers like iframes. [Is this code covered by automated tests?]: yes [Has the fix been verified in Nightly?]: yes [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: Strictly increases the number of results reachable by find-in-page. [String changes made/needed]: none
Flags: needinfo?(bwerth)
Attachment #8944118 - Flags: approval-mozilla-beta?
Comment on attachment 8944118 [details] Bug 1430187 Part 1: Allow find-in-page to unilaterally find text that's out of view in a scrollable container. Regression from 58, let's fix this in 59. This should be in the beta 5 build.
Attachment #8944118 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Can this be considered for a 58.0.2? Recent SuMo thread: https://support.mozilla.org/questions/1202150
(In reply to jscher2000 from comment #17) > Can this be considered for a 58.0.2? > > Recent SuMo thread: https://support.mozilla.org/questions/1202150 I can't reproduce the issue reported in that thread. The testcase page has no textareas or secondary scrollable content frames, so this patch will not address what the reporter is experiencing (judging by the content of the page given as a testcase).
Sorry, try the test case later in the thread: https://www.jeffersonscher.com/temp/find-asia.html F3 works properly in Nightly, not in stable (skips matches 9 and 10, for example).
(In reply to jscher2000 from comment #19) > Sorry, try the test case later in the thread: > https://www.jeffersonscher.com/temp/find-asia.html Oops, my mistake. Yes, that case is solved by this patch.
This seems to not be totally fixed yet. See this simple example: https://www.w3schools.com/cssref/playit.asp?filename=playcss_overflow&preval=auto Press Ctrl+F to find the word "value" on this page. There should be 9 matches total. Now press F3 to cycle through all the matches. Notice it skips #8 since that is the only match not initially visible in the scrollable DIV.
(In reply to sallen81 from comment #21) > This seems to not be totally fixed yet. See this simple example: > https://www.w3schools.com/cssref/playit. > asp?filename=playcss_overflow&preval=auto > > Press Ctrl+F to find the word "value" on this page. There should be 9 > matches total. Now press F3 to cycle through all the matches. Notice it > skips #8 since that is the only match not initially visible in the > scrollable DIV. Sorry forgot to mention I'm using 64-bit Firefox 60.0 (stable).
(In reply to sallen81 from comment #21) > This seems to not be totally fixed yet. See this simple example: > https://www.w3schools.com/cssref/playit. > asp?filename=playcss_overflow&preval=auto > > Press Ctrl+F to find the word "value" on this page. There should be 9 > matches total. Now press F3 to cycle through all the matches. Notice it > skips #8 since that is the only match not initially visible in the > scrollable DIV. I see the same problem in 60. It's working correctly in Nightly. That text is in a div{overflow:auto} instead of a textarea, so it could be a different bug.
(In reply to jscher2000 from comment #23) > I see the same problem in 60. It's working correctly in Nightly. > > That text is in a div{overflow:auto} instead of a textarea, so it could be a > different bug. Yes, this issue was resolved in Bug 1436431. That made the cutoff for inclusion in 61 and is in 61 Beta today.
I have this problem on OSX with firefox 63.0.3 Searching through or list of jira tickets permanently fails and when the searched text is in the visible area, it is found - otherwise it is not found. but that isn't reproducible and seems to depend on the text you enter in search....very weird bug...
I have the same problem in Firefox 63.0.3 and FirefoxDeveloperEdition 64.0b14, on MaxOs. Before I upgraded to Firefox 63.0.3, I used 57-something, and at that version the search-problem didn't exist. In Firefox Quantum Extended Support Release 60.3.0esr the problem DON'T exist!
(In reply to devzero from comment #25) > I have this problem on OSX with firefox 63.0.3 > > Searching through or list of jira tickets permanently fails and when the > searched text is in the visible area, it is found - otherwise it is not > found. but that isn't reproducible and seems to depend on the text you enter > in search....very weird bug... We are tracking this issue in Bug 1482147, which is derived from a JIRA example.
See Also: → 1482147
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: